Agregado de Meta description en algunas pestañas del sitio

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Hotel Rapa Nui: Vive la experiencia única de Isla de Pascua con habitaciones, tours y ceremonias ancestrales."
   <link rel="icon" href="/Img-otros/logo.png" type="image/x-icon">
   <title>Hotel Rapa Nui</title>
   <!-- Bootstrap CSS -->
