--- a/habitacion_familiar.html
+++ b/habitacion_familiar.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="/Img-otros/logo.png" type="image/x-icon">
-  <meta name="description" content="Explora Rapa Nui y aloja en nuestra habitación familiar. Comodidad y tranquilidad garantizadas, atendido por gente local."
-  <title>Habitación Familiar | Hotel Rapa Nui</title>
+  <meta name="description" content="Explora Rapa Nui y aloja en nuestra habitación familiar. Comodidad y tranquilidad garantizadas, atendido por gente local.">
+  <title> Habitación Familiar | Hotel Rapa Nui</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
