agregado imágenes premios al home

--- a/index.html
+++ b/index.html
@@ -307,19 +307,15 @@
     <div class="row justify-content-center align-items-center g-4">
       <!-- Logo 1 -->
       <div class="col-6 col-sm-4 col-md-2">
-        <img src="img/tripadvisor-1.png" alt="Tripadvisor Bravo" class="img-fluid grayscale-hover">
+        <img src="Img-otros/premio2.png" alt="Tripadvisor Bravo" class="img-fluid grayscale-hover">
       </div>
       <!-- Logo 2 -->
       <div class="col-6 col-sm-4 col-md-2">
-        <img src="img/tripadvisor-2.png" alt="Travelers' Choice" class="img-fluid grayscale-hover">
+        <img src="Img-otros/premio1.png" alt="Travelers' Choice" class="img-fluid grayscale-hover">
       </div>
       <!-- Logo 3 -->
       <div class="col-6 col-sm-4 col-md-2">
-        <img src="img/premio-x.png" alt="Premio X" class="img-fluid grayscale-hover">
-      </div>
-      <!-- Logo 4 -->
-      <div class="col-6 col-sm-4 col-md-2">
-        <img src="img/premio-y.png" alt="Premio Y" class="img-fluid grayscale-hover">
+        <img src="Img-otros/premio3.png" alt="Premio X" class="img-fluid grayscale-hover">
       </div>
       <!-- Agrega más logos si es necesario -->
     </div>
