Modificación en el footer: Agregado de logo en blanco

--- a/index.html
+++ b/index.html
@@ -371,10 +371,7 @@
             <li><a href="contacto.html" class="text-white">Contacto</a></li>
           </ul>
           <div class="mt-3">
-            <img src="img/tripadvisor-1.png" alt="TripAdvisor Bravo" class="img-fluid mb-2" width="100">
-            <img src="img/tripadvisor-2.png" alt="Travelers' Choice" class="img-fluid mb-2" width="100">
-          </div>
-          <img src="img/logo-hotel-footer.png" alt="Logo Hotel" class="img-fluid mt-2" width="120">
+          <img src="Img-otros/logo_blanco.png" alt="Logo Hotel" class="img-fluid mt-2" width="120">
         </div>
       </div>
   
