--- a/informacion.html
+++ b/informacion.html
@@ -175,8 +175,8 @@
     </div>
   </section>
 
- <!-- FOOTER -->
- <footer class="bg-dark text-white pt-5 pb-3 mt-5">
+  <!-- FOOTER -->
+  <footer class="bg-dark text-white pt-5 pb-3 mt-5">
     <div class="container">
       <div class="row">
         <!-- Columna 1: Información -->
@@ -221,10 +221,7 @@
             <li><a href="contacto.html" class="text-white">Contacto</a></li>
           </ul>
           <div class="mt-3">
-            <img src="img/tripadvisor-1.png" alt="TripAdvisor Bravo" class="img-fluid mb-2" width="100">
-            <img src="img/tripadvisor-2.png" alt="Travelers' Choice" class="img-fluid mb-2" width="100">
-          </div>
-          <img src="img/logo-hotel-footer.png" alt="Logo Hotel" class="img-fluid mt-2" width="120">
+          <img src="Img-otros/logo_blanco.png" alt="Logo Hotel" class="img-fluid mt-2" width="120">
         </div>
       </div>
   
