--- a/matrimonios.html
+++ b/matrimonios.html
@@ -106,6 +106,7 @@
   <footer class="bg-dark text-white pt-5 pb-3 mt-5">
     <div class="container">
       <div class="row">
+        <!-- Columna 1: Información -->
         <div class="col-md-4 mb-4">
           <h5 class="text-uppercase mb-3">INFORMACIÓN:</h5>
           <hr class="bg-white" style="width: 60px;">
@@ -120,9 +121,21 @@
             <a href="#" class="text-white"><i class="bi bi-instagram fs-5"></i></a>
           </div>
         </div>
+  
+        <!-- Columna 2: Mapa -->
         <div class="col-md-4 mb-4">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3892.611182130908!2d-109.42624888587255!3d-27.15012828299363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x994aef1b991b7ad5%3A0x3ff4fc350c6ab7ff!2sHotel%20Hare%20Nua!5e0!3m2!1ses-419!2scl!4v1712472101608!5m2!1ses-419!2scl" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3892.611182130908!2d-109.42624888587255!3d-27.15012828299363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x994aef1b991b7ad5%3A0x3ff4fc350c6ab7ff!2sHotel%20Hare%20Nua!5e0!3m2!1ses-419!2scl!4v1712472101608!5m2!1ses-419!2scl"
+            width="100%"
+            height="250"
+            style="border:0;"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
         </div>
+  
+        <!-- Columna 3: Otros enlaces e insignias -->
         <div class="col-md-4 mb-4">
           <h5 class="text-uppercase mb-3">OTROS</h5>
           <hr class="bg-white" style="width: 60px;">
@@ -135,12 +148,10 @@
             <li><a href="contacto.html" class="text-white">Contacto</a></li>
           </ul>
           <div class="mt-3">
-            <img src="img/tripadvisor-1.png" alt="TripAdvisor Bravo" class="img-fluid mb-2" width="100">
-            <img src="img/tripadvisor-2.png" alt="Travelers' Choice" class="img-fluid mb-2" width="100">
-          </div>
-          <img src="img/logo-hotel-footer.png" alt="Logo Hotel" class="img-fluid mt-2" width="120">
+          <img src="Img-otros/logo_blanco.png" alt="Logo Hotel" class="img-fluid mt-2" width="120">
         </div>
       </div>
+  
       <div class="text-center mt-4">
         <small>&copy; 2025 Hotel Rapa Nui. Todos los derechos reservados | Desarrollado por <a href="#" class="text-pink">TuNombre</a></small>
       </div>
