--- a/tours.html
+++ b/tours.html
@@ -159,8 +159,8 @@
     </div>
   </section>
 
-<!-- FOOTER -->
-<footer class="bg-dark text-white pt-5 pb-3 mt-5">
+  <!-- FOOTER -->
+  <footer class="bg-dark text-white pt-5 pb-3 mt-5">
     <div class="container">
       <div class="row">
         <!-- Columna 1: Información -->
@@ -205,10 +205,7 @@
             <li><a href="contacto.html" class="text-white">Contacto</a></li>
           </ul>
           <div class="mt-3">
-            <img src="img/tripadvisor-1.png" alt="TripAdvisor Bravo" class="img-fluid mb-2" width="100">
-            <img src="img/tripadvisor-2.png" alt="Travelers' Choice" class="img-fluid mb-2" width="100">
-          </div>
-          <img src="img/logo-hotel-footer.png" alt="Logo Hotel" class="img-fluid mt-2" width="120">
+          <img src="Img-otros/logo_blanco.png" alt="Logo Hotel" class="img-fluid mt-2" width="120">
         </div>
       </div>
   
@@ -217,7 +214,6 @@
       </div>
     </div>
   </footer>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
