--- a/blog.html
+++ b/blog.html
@@ -78,7 +78,7 @@
             <div class="card-body">
               <span class="badge bg-success mb-2">RAPA NUI</span>
               <h5 class="card-title">Ana Kai Tangata: Cueva de los caníbales en Rapa Nui</h5>
-              <p class="card-text"><a href="#" class="text-decoration-none fw-bold" aria-label="Leer más sobre Ana Kai Tangata">LEER MÁS →</a></p>
+              <p class="card-text"><a href="/blog_post_1.html" class="text-decoration-none fw-bold" aria-label="Leer más sobre Ana Kai Tangata">LEER MÁS →</a></p>
             </div>
             <div class="card-footer bg-white border-0 small text-muted">
               Hotel Rapa Nui · marzo 26, 2025
@@ -93,7 +93,7 @@
             <div class="card-body">
               <span class="badge bg-success mb-2">RAPA NUI</span>
               <h5 class="card-title">Tour amanecer en la Isla de Pascua: Una experiencia inolvidable</h5>
-              <p class="card-text"><a href="#" class="text-decoration-none fw-bold" aria-label="Leer más sobre Tour Amanecer">LEER MÁS →</a></p>
+              <p class="card-text"><a href="/blog_post_2.html" class="text-decoration-none fw-bold" aria-label="Leer más sobre Tour Amanecer">LEER MÁS →</a></p>
             </div>
             <div class="card-footer bg-white border-0 small text-muted">
               Hotel Rapa Nui · marzo 6, 2025
@@ -108,7 +108,7 @@
             <div class="card-body">
               <span class="badge bg-success mb-2">RAPA NUI</span>
               <h5 class="card-title">Consejos para viajar a Isla de Pascua</h5>
-              <p class="card-text"><a href="#" class="text-decoration-none fw-bold" aria-label="Leer más sobre consejos para viajar">LEER MÁS →</a></p>
+              <p class="card-text"><a href="/blog_post_3.html" class="text-decoration-none fw-bold" aria-label="Leer más sobre consejos para viajar">LEER MÁS →</a></p>
             </div>
             <div class="card-footer bg-white border-0 small text-muted">
               Hotel Rapa Nui · febrero 22, 2025
@@ -123,7 +123,7 @@
             <div class="card-body">
               <span class="badge bg-success mb-2">RAPA NUI</span>
               <h5 class="card-title">Hotel Rapa Nui: Isla de Pascua en su esencia más pura</h5>
-              <p class="card-text"><a href="#" class="text-decoration-none fw-bold" aria-label="Leer más sobre el hotel Hare Nua">LEER MÁS →</a></p>
+              <p class="card-text"><a href="/blog_post_4.html" class="text-decoration-none fw-bold" aria-label="Leer más sobre el hotel Hare Nua">LEER MÁS →</a></p>
             </div>
             <div class="card-footer bg-white border-0 small text-muted">
               Hotel Rapa Nui · enero 21, 2025
@@ -138,7 +138,7 @@
             <div class="card-body">
               <span class="badge bg-success mb-2">RAPA NUI</span>
               <h5 class="card-title">Paisajes de Rapa Nui: Más allá de los moais</h5>
-              <p class="card-text"><a href="#" class="text-decoration-none fw-bold" aria-label="Leer más sobre paisajes de Rapa Nui">LEER MÁS →</a></p>
+              <p class="card-text"><a href="blog_post_5.html" class="text-decoration-none fw-bold" aria-label="Leer más sobre paisajes de Rapa Nui">LEER MÁS →</a></p>
             </div>
             <div class="card-footer bg-white border-0 small text-muted">
               Hotel Rapa Nui · enero 15, 2025
@@ -153,7 +153,7 @@
             <div class="card-body">
               <span class="badge bg-success mb-2">RAPA NUI</span>
               <h5 class="card-title">Tatuajes Rapa Nui: Historia y significado</h5>
-              <p class="card-text"><a href="#" class="text-decoration-none fw-bold" aria-label="Leer más sobre tatuajes rapanui">LEER MÁS →</a></p>
+              <p class="card-text"><a href="/blog_post_6.html" class="text-decoration-none fw-bold" aria-label="Leer más sobre tatuajes rapanui">LEER MÁS →</a></p>
             </div>
             <div class="card-footer bg-white border-0 small text-muted">
               Hotel Rapa Nui · diciembre 15, 2024
