Ajustes en tipografías, colores, y tamaños en landing información

--- a/matrimonios.html
+++ b/matrimonios.html
@@ -71,7 +71,8 @@
       <div class="row align-items-center">
         <div class="col-md-6">
           <h2 class="fw-bold mb-3">Una ceremonia única desde el corazón de Rapa Nui</h2>
-          <p>En Hotel Rapa Nui te invitamos a vivir una experiencia espiritual y simbólica como ninguna otra. Nuestro matrimonio ancestral se realiza bajo la guía de sabios Rapa Nui, en un entorno natural y sagrado. Ideal para parejas que buscan un vínculo eterno, lleno de conexión con la cultura y el entorno.</p>
+          <p>Celebra el amor en su forma más pura y trascendental en Hotel Rapa Nui. Te invitamos a ser parte de una ceremonia ancestral única, cargada de simbolismo, espiritualidad y conexión con la naturaleza. <br><br>Bajo la guía de sabios Rapa Nui, vivirás un rito sagrado que honra las tradiciones de la isla, en un escenario natural que transmite paz y energía.
+            Una experiencia profundamente significativa, pensada para parejas que desean sellar su compromiso con un lazo eterno, en armonía con la cultura local y el entorno mágico de Rapa Nui.</p>
         </div>
         <div class="col-md-6">
           <img src="Img-otros/Matrimonios_ancestrales_2.jpg" class="img-fluid rounded" alt="Matrimonio en Rapa Nui">
