--- a/informacion.html
+++ b/informacion.html
@@ -71,7 +71,7 @@
   <!-- Ingreso Rapa Nui -->
   <section class="py-5 bg-white">
     <div class="container">
-      <h3 class="mb-4">Ingreso Rapa Nui</h3>
+      <h2 class="mb-4">Ingreso Rapa Nui</h2>
       <div class="row align-items-center">
         <div class="col-md-6 mb-4 mb-md-0">
           <img src="Img-otros/playa_horizontal.jpg" alt="Ingreso Rapa Nui" class="img-fluid rounded">
@@ -89,7 +89,8 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6">
-          <h3>¿Qué traer para tu visita?</h3>
+          <h2 class="list_rapa_nui">¿Qué traer para tu visita?</h2>
+          <p>¿Estás preparando tu visita a Rapa Nui, pero no sabes que traer? No te preocupes, vistiar Rapa Nui no tiene porque ser dificil, por eso te dejamos a continuación un listado de los productos indispensables que debes traer:</p>
           <ul>
             <li>Zapatillas cómodas</li>
             <li>Sandalias</li>
@@ -100,7 +101,7 @@
             <li>Repelente</li>
             <li>Lentes de sol</li>
           </ul>
-          <p>*Se recomienda traer dinero en efectivo. Hay cajeros cercanos al hotel.</p>
+          <p class="recomendacion_efectivo"><i>*Se recomienda traer dinero en efectivo. Hay cajeros cercanos al hotel.</p></i>
         </div>
         <div class="col-md-6">
           <div class="row g-3">
@@ -124,25 +125,25 @@
     <div class="container">
       <div class="row align-items-start">
         <div class="col-md-6 mb-4 mb-md-0">
-          <img src="Img-otros/Moai_vertical.jpg" class="img-fluid rounded">
+          <img src="Img-otros/Moai_vertical.jpg" class="img-fluid rounded img-moai">
         </div>
         <div class="col-md-6">
-          <h3 class="mb-4">Preguntas Frecuentes</h3>
+          <h2 class="mb-4">Preguntas Frecuentes</h2>
           <div class="accordion" id="faqAccordion">
             <div class="accordion-item">
               <h2 class="accordion-header" id="faq1">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1"> ¿Cuál es la mejor fecha para visitar la isla?</button>
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1"> ¿Cuál es la mejor fecha para visitar la isla?</button>
               </h2>
-              <div id="collapse1" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-                <div class="accordion-body">La isla es visitable todo el año, pero se recomienda entre marzo y diciembre por el clima templado y menor afluencia.</div>
+              <div id="collapse1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
+                <div class="accordion-body">¡Cualquier momento es perfecto para visitar Rapa Nui y sumergirse en su misteriosa belleza! Sin embargo, para aquellos que desean evitar las multitudes y disfrutar de un clima más tranquilo, recomendamos considerar los meses de noviembre hasta abril para días más calurosos y desde mayo a octubre para un clima más fresco. Durante estos períodos, el clima es más templado y hay menos visitantes, lo que permite una experiencia más íntima y auténtica en la isla.</div>
               </div>
             </div>
             <div class="accordion-item">
               <h2 class="accordion-header" id="faq2">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">¿Qué hace tan especial al Hotel Hare Nua?</button>
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">¿Qué hace tan especial al Hotel Rapa Nui?</button>
               </h2>
               <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-                <div class="accordion-body">Nuestra ubicación, atención personalizada y fusión de cultura ancestral con lujo moderno nos diferencia.</div>
+                <div class="accordion-body">¡En Hotel Rapa Nui, nos enorgullecemos de ofrecer a nuestros huéspedes una experiencia única e inolvidable en Rapa Nui! Nuestro hotel se destaca por su ubicación privilegiada, justo en el corazón de la isla, lo que te permite sumergirte completamente en la cultura y la belleza de este lugar mágico. Además, nuestras instalaciones están diseñadas con un estilo auténtico y acogedor, combinando la tradición local con el confort moderno. Nuestro equipo de profesionales está dedicado a brindarte un servicio excepcional y garantizar que cada momento de tu estancia sea memorable.</div>
               </div>
             </div>
             <div class="accordion-item">
@@ -150,7 +151,7 @@
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3">¿Cuáles son sus políticas de cancelación y reembolso?</button>
               </h2>
               <div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-                <div class="accordion-body">Puedes cancelar sin costo hasta 7 días antes del check-in. Después se cobra una noche de penalidad.</div>
+                <div class="accordion-body">Entendemos que los planes pueden cambiar inesperadamente. Por eso, ofrecemos flexibilidad en nuestras políticas de cancelación y reembolso hasta con 1 mes de anticipación a la llegada. Para obtener los detalles específicos sobre nuestras políticas, le recomendaría que nos contacte directamente o consulte nuestra página web, donde encontrará toda la información actualizada y detallada.</div>
               </div>
             </div>
             <div class="accordion-item">
@@ -158,7 +159,7 @@
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4">¿Ofrecen transporte desde y hacia el aeropuerto?</button>
               </h2>
               <div id="collapse4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-                <div class="accordion-body">Sí, contamos con servicio de transfer gratuito con previa coordinación.</div>
+                <div class="accordion-body">¡Por supuesto! Queremos que tu llegada y salida sean lo más cómodas posible. Por eso, ofrecemos servicio de transporte desde y hacia el aeropuerto de Rapa Nui con un costo de 40usd por persona, lo que incluye la experiencia de ser recibido con un collar de flores naturales y hecho a mano y además recorrer Hanga Roa, la única ciudad de Rapa nui . Simplemente avísanos de tu itinerario de vuelo y estaremos encantados de organizar el transporte para ti. De esta manera, podrás comenzar tu aventura en la isla de la manera más conveniente y sin preocupaciones.</div>
               </div>
             </div>
             <div class="accordion-item">
@@ -166,7 +167,7 @@
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5">¿Cuál es el horario de check-in y check-out?</button>
               </h2>
               <div id="collapse5" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-                <div class="accordion-body">Check-in desde las 14:00 hrs y check-out hasta las 11:00 hrs.</div>
+                <div class="accordion-body">Nuestro horario de check-in es a partir de las 14:00 horas, aunque si la habitación está disponible antes de este horario podemos llevarlo a su habitación sin problema. Para el check-out es hasta las 11:00 horas. En caso de requerir hacer un Late Check out este tiene un costo adicional que puede consultar en recepción sin problema.</div>
               </div>
             </div>
           </div>
