--- a/habitacion_familiar.html
+++ b/habitacion_familiar.html
@@ -90,7 +90,7 @@
         <h4 class="fw-bold mb-3">Instalaciones</h4>
         <p>Habitaciones de deluxe y espaciosas para dos huéspedes, recientemente construidas y ubicadas en el segundo piso. Preciosas vistas a nuestro jardín interior y a la avenida principal Atamu Tekena.</p>
         <p>Acogedoras, con salida directa a nuestro oasis interior y su imponente vegetación. Estas habitaciones son parte original de la primera construcción del hotel, entregando un símbolo histórico y conservación en el largo plazo.</p>
-        <a href="contacto.html" class="btn btn-dark mt-3">Reservar</a>
+        <a href="contacto.html" class="btn btn-azul mt-3">Reservar</a>
 
         <h5 class="mt-4">Comodidades</h5>
         <ul class="list-unstyled row row-cols-2">
