Agregado de logo en el navbar para todos los html

--- a/habitaciones.html
+++ b/habitaciones.html
@@ -17,7 +17,9 @@
     <div class="container d-flex align-items-center justify-content-between">
       
       <!-- Logo a la izquierda -->
-      <a class="navbar-brand fw-bold fs-4" href="index.html">Hotel Rapa Nui</a>
+      <a class="navbar-brand fw-bold fs-4" href="index.html">
+        <img src="Img-otros/logo_blanco.png" alt="Hotel Rapa Nui Logo" style="height: 60px;">
+      </a>
 
       <!-- Toggler para mobile -->
       <button
