--- a/habitacion_familiar.html
+++ b/habitacion_familiar.html
@@ -132,8 +132,8 @@
         <div class="col-md-4">
           <div class="d-flex flex-column gap-3">
             <a href="contacto.html" class="text-decoration-none text-primary fw-bold">→ CONTACTO</a>
-            <a href="#" class="text-decoration-none text-primary fw-bold">→ RESERVA</a>
-            <a href="#" class="text-decoration-none text-primary fw-bold">→ INFORMACIÓN IMPORTANTE</a>
+            <a href="/tours.html" class="text-decoration-none text-primary fw-bold">→ TOURS & EXPERIENCIAS</a>
+            <a href="/informacion.html" class="text-decoration-none text-primary fw-bold">→ INFORMACIÓN IMPORTANTE</a>
           </div>
         </div>
       </div>
