Arreglo en el html y JS de los precios de cada tour

--- a/tour_ranokau_y_orongo.html
+++ b/tour_ranokau_y_orongo.html
@@ -130,12 +130,12 @@
       <div class="col-md-4">
         <div class="border p-4 rounded shadow-sm">
           <h5 class="mb-3">Precio Individual:</h5>
-          <h4 class="text-primary mb-3">$<span id="price">197</span> USD</h4>
+          <h4 class="text-primary mb-3">$<span id="price">60.000</span> CLP</h4>
 
           <label for="quantity">Cantidad de personas:</label>
           <input type="number" id="quantity" class="form-control mb-3" value="1" min="1">
 
-          <p>Total: <strong>$<span id="total">197</span></strong> USD</p>
+          <p>Total: <strong>$<span id="total">60.000</span></strong> CLP</p>
           <button class="btn btn-dark w-100">Reservar ahora</button>
         </div>
       </div>
@@ -199,7 +199,7 @@
   </footer>
 
   <script>
-    const pricePerPerson = 197;
+    const pricePerPerson = 60000;
     const quantityInput = document.getElementById('quantity');
     const totalSpan = document.getElementById('total');
 
