Comentarios para cambiar imágenes y colocado de imágenes repetidas

--- a/tour_ranokau_y_orongo.html
+++ b/tour_ranokau_y_orongo.html
@@ -71,10 +71,10 @@
         <div class="mb-4">
           <img src="Img-tours/tour_orongo.jpg" class="img-fluid rounded mb-2" alt="Tour Moai Principal">
           <div class="d-flex gap-2">
-            <img src="Img-tours/tour_orongo.jpg" class="img-fluid rounded" style="width: 100px;">
-            <img src="Img-tours/tour_orongo.jpg" class="img-fluid rounded" style="width: 100px;">
-            <img src="Img-tours/tour_orongo.jpg" class="img-fluid rounded" style="width: 100px;">
-            <img src="Img-tours/tour_orongo.jpg" class="img-fluid rounded" style="width: 100px;">
+            <img src="Img-tours/tour_orongo.jpg" class="img-fluid rounded" style="width: 100px;"> <!-- Agregar Imagen Nueva -->
+            <img src="Img-tours/tour_orongo.jpg" class="img-fluid rounded" style="width: 100px;"> <!-- Agregar Imagen Nueva -->
+            <img src="Img-tours/tour_orongo.jpg" class="img-fluid rounded" style="width: 100px;"> <!-- Agregar Imagen Nueva -->
+            <img src="Img-tours/tour_orongo.jpg" class="img-fluid rounded" style="width: 100px;"> <!-- Agregar Imagen Nueva -->
           </div>
         </div>
 
