--- a/tour_fabrica_moais.html
+++ b/tour_fabrica_moais.html
@@ -69,12 +69,12 @@
       <div class="col-md-8">
         <!-- Galería -->
         <div class="mb-4">
-          <img src="img/tour1.jpg" class="img-fluid rounded mb-2" alt="Tour Moai Principal">
+          <img src="Img-tours/tour_fabrica_moai.jpg" class="img-fluid rounded mb-2" alt="Tour Moai Principal">
           <div class="d-flex gap-2">
-            <img src="Img-tours/tour_fabrica_moai.jpg" class="img-fluid rounded" style="width: 100px;">
-            <img src="img/tour3.jpg" class="img-fluid rounded" style="width: 100px;">
-            <img src="img/tour4.jpg" class="img-fluid rounded" style="width: 100px;">
-            <img src="img/tour5.jpg" class="img-fluid rounded" style="width: 100px;">
+            <img src="Img-tours/tour_fabrica_moai.jpg" class="img-fluid rounded" style="width: 100px;"> <!-- Agregar Imagen Nueva -->
+            <img src="Img-tours/tour_fabrica_moai.jpg" class="img-fluid rounded" style="width: 100px;"> <!-- Agregar Imagen Nueva -->
+            <img src="Img-tours/tour_fabrica_moai.jpg" class="img-fluid rounded" style="width: 100px;"> <!-- Agregar Imagen Nueva -->
+            <img src="Img-tours/tour_fabrica_moai.jpg" class="img-fluid rounded" style="width: 100px;"> <!-- Agregar Imagen Nueva -->
           </div>
         </div>
 
