--- a/tour_hanga_roa.html
+++ b/tour_hanga_roa.html
@@ -71,10 +71,10 @@
         <div class="mb-4">
           <img src="Img-tours/tour_hanga_roa.png" class="img-fluid rounded mb-2" alt="Tour Moai Principal">
           <div class="d-flex gap-2">
-            <img src="img/tour2.jpg" class="img-fluid rounded" style="width: 100px;">
-            <img src="img/tour3.jpg" class="img-fluid rounded" style="width: 100px;">
-            <img src="img/tour4.jpg" class="img-fluid rounded" style="width: 100px;">
-            <img src="img/tour5.jpg" class="img-fluid rounded" style="width: 100px;">
+            <img src="Img-tours/tour_hanga_roa.png" class="img-fluid rounded" style="width: 100px;"> <!-- Agregar Imagen Nueva -->
+            <img src="Img-tours/tour_hanga_roa.png" class="img-fluid rounded" style="width: 100px;"> <!-- Agregar Imagen Nueva -->
+            <img src="Img-tours/tour_hanga_roa.png" class="img-fluid rounded" style="width: 100px;"> <!-- Agregar Imagen Nueva -->
+            <img src="Img-tours/tour_hanga_roa.png" class="img-fluid rounded" style="width: 100px;"> <!-- Agregar Imagen Nueva -->
           </div>
         </div>
 
