Ajustes home, específicamente enlazado y títulos cuadros de tours

--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
             <div class="tour-rating"><i class="bi bi-star-fill text-warning"></i> 4.9</div>
             <div class="tour-footer">
               <small>Disponible</small>
-              <h5 class="mb-0">Costa Norte Rapa Nui</h5>
-              <p class="price">$80.000 CLP</p>
+              <h5 class="mb-0"><a href="tour_costa_norte.html" class="text-white text-decoration-none">Costa Norte Rapa Nui</h5></a>
+              <p class="price"><a href="tour_costa_norte.html" class="text-white text-decoration-none">$80.000 CLP</p></a>
             </div>
           </div>
         </div>
@@ -210,8 +210,8 @@
             <div class="tour-rating"><i class="bi bi-star-fill text-warning"></i> 4.8</div>
             <div class="tour-footer">
               <small>Últimos Cupos</small>
-              <h5 class="mb-0">Tour Privado Fábrica de los Moais</h5>
-              <p class="price">$135.000 CLP</p>
+              <h5 class="mb-0"><a href="/tour_fabrica_moais.html" class="text-white text-decoration-none">Tour Privado Fábrica de los Moais</h5></a>
+              <p class="price"><a href="/tour_fabrica_moais.html" class="text-white text-decoration-none">$135.000 CLP</p></a>
             </div>
           </div>
         </div>
@@ -225,8 +225,8 @@
             <div class="tour-rating"><i class="bi bi-star-fill text-warning"></i> 5.0</div>
             <div class="tour-footer">
               <small>Disponible</small>
-              <h5 class="mb-0">Cuevas Ancestrales y Orongo</h5>
-              <p class="price">$115.000 CLP</p>
+              <h5 class="mb-0"><a href="/tour_cuevas_ancestrales.html" class="text-white text-decoration-none">Cuevas Ancestrales y Orongo</h5></a>
+              <p class="price"><a href="/tour_cuevas_ancestrales.html" class="text-white text-decoration-none">$115.000 CLP</p></a>
             </div>
           </div>
         </div>
