--- a/habitaciones.html
+++ b/habitaciones.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Experimenta la calma y tranquilidad en el mejor hotel en Rapa Nui. Alojamiento con cultura y tradición local."
+  <meta name="description" content="Experimenta la calma y tranquilidad en el mejor hotel en Rapa Nui. Alojamiento con cultura y tradición local." />
   <link rel="icon" href="/Img-otros/logo.png" type="image/x-icon">
   <title>Habitaciones | Hotel Rapa Nui</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
