Actualización listado de lugares de recogidas de los tours

--- a/tour_hanga_roa.html
+++ b/tour_hanga_roa.html
@@ -113,16 +113,28 @@
             <p>Salida desde el hotel a las 9:00, recorrido por Ahu Tongariki, Rano Raraku, Ahu Akahanga. Pausa para snacks y regreso al hotel a las 15:00 hrs.</p>
           </div>
           <div id="recogida">
-            <p>Recogida desde tu hotel entre 15 a 10 minutos antes de la hora programada. Llevar identificación visible.</p>
+            <p><b>Aviso:</b> La recogida tendrá lugar 15 minuto(s) antes de la hora de salida programada.
+              Ofrecemos recogidas en los siguientes lugares para acudir a su experiencia:</p>
           </div>
         </div>
-
-        <h6>¿Qué necesito llevar?</h6>
         <ul>
-          <li>Zapatos cómodos</li>
-          <li>Protección solar</li>
-          <li>Agua y snacks</li>
-          <li>Cámara fotográfica</li>
+          <li>Altiplanico Rapa Nui</li>
+          <li>Easter Island Eco Lodge</li>
+          <li>Explora Rapa Nui</li>
+          <li>Hanana’s Residential Mata Vai Rahi</li>
+          <li>Hanga Piko</li>
+          <li>Hanga Roa Habrbour</li>
+          <li>Hare Maea</li>
+          <li>Hostal Gomero</li>
+          <li>Hotel Manavai</li>
+          <li>Hotel Manutara</li>
+          <li>Hotel Oceania Rapa Nui</li>
+          <li>Hotel Ohana</li>
+          <li>Hotel Puku vai</li>
+          <li>Hotel taha Tai</li>
+          <li>Hotel Tiare Pacific</li>
+          <li>Hotumatua</li>
+          <li>Iorana Hotel</li>
         </ul>
       </div>
 
