Descripciones individuales para cada uno de los tours según correspondan

--- a/tour_cuevas_ancestrales.html
+++ b/tour_cuevas_ancestrales.html
@@ -71,16 +71,20 @@
         <div class="mb-4">
           <img src="Img-tours/tour_cuevas.jpg" class="img-fluid rounded mb-2" alt="Tour Moai Principal">
           <div class="d-flex gap-2">
-            <img src="Img-tours/tour_costa_norte.jpg" class="img-fluid rounded" style="width: 100px;"> <!-- Agregar Imagen Nueva -->
-            <img src="Img-tours/tour_costa_norte.jpg" class="img-fluid rounded" style="width: 100px;"> <!-- Agregar Imagen Nueva -->
-            <img src="Img-tours/tour_costa_norte.jpg" class="img-fluid rounded" style="width: 100px;"> <!-- Agregar Imagen Nueva -->
-            <img src="Img-tours/tour_costa_norte.jpg" class="img-fluid rounded" style="width: 100px;"> <!-- Agregar Imagen Nueva -->
+            <img src="Img-tours/tour_cuevas.jpg" class="img-fluid rounded" style="width: 100px;"> <!-- Agregar Imagen Nueva -->
+            <img src="Img-tours/tour_cuevas.jpg" class="img-fluid rounded" style="width: 100px;"> <!-- Agregar Imagen Nueva -->
+            <img src="Img-tours/tour_cuevas.jpg" class="img-fluid rounded" style="width: 100px;"> <!-- Agregar Imagen Nueva -->
+            <img src="Img-tours/tour_cuevas.jpg" class="img-fluid rounded" style="width: 100px;"> <!-- Agregar Imagen Nueva -->
           </div>
         </div>
 
         <!-- Título y descripción -->
         <h2>Tour privado por la fábrica de los Moai</h2>
-        <p>En este tour recorrerás gran parte de la isla, descubriendo la costa oeste, un lugar con increíbles tesoros arqueológicos. Visitarás los lugares más emblemáticos de la isla como Ahu Tongariki y Rano Raraku.</p>
+        <p>Imperdible recorrido de día completo que resalta los puntos más importantes de la última civilización de esta isla.<br><br>
+
+          Visitará el pueblo ceremonial de Orongo, lugar donde se realizó la competencia Tangata Manu (Hombre Pájaro) para conocer y profundizar en la historia de la civilización, sus restos arqueológicos e históricos y su comportamiento social.
+          <br><br>También aprenderás cómo vivía la antigua civilización, visitando una de las cuevas más grandes de Rapa Nui. Aquí se encuentran importantes restos arqueológicos.
+          Sumérgete en la cultura ancestral de Isla de Pascua, conociendo sus secretos, cultura e historia y déjate sorprender por este increíble y mítico lugar.</p>
 
         <!-- Tabs -->
         <ul class="nav nav-tabs mt-4" id="tabMenu">
@@ -113,7 +117,8 @@
             <p>Salida desde el hotel a las 9:00, recorrido por Ahu Tongariki, Rano Raraku, Ahu Akahanga. Pausa para snacks y regreso al hotel a las 15:00 hrs.</p>
           </div>
           <div id="recogida">
-            <p>Recogida desde tu hotel entre 15 a 10 minutos antes de la hora programada. Llevar identificación visible.</p>
+            <p><p><b>Aviso:</b> La recogida tendrá lugar 15 minuto(s) antes de la hora de salida programada.
+              Ofrecemos recogidas en los siguientes lugares para acudir a su experiencia:</p>
           </div>
         </div>
         <ul>
