--- a/tour_fabrica_moais.html
+++ b/tour_fabrica_moais.html
@@ -80,7 +80,9 @@
 
         <!-- Título y descripción -->
         <h2>Tour privado por la fábrica de los Moai</h2>
-        <p>En este tour recorrerás gran parte de la isla, descubriendo la costa oeste, un lugar con increíbles tesoros arqueológicos. Visitarás los lugares más emblemáticos de la isla como Ahu Tongariki y Rano Raraku.</p>
+        <p>En este tour recorrerás gran parte de la isla, descubriendo la costa oeste, un lugar con increíbles e inigualables tesoros arqueológicos, que cuentan la historia y esplendor de la civilización Rapa Nui.<br><br>
+          Podrás visitar los lugares más emblemáticos de la isla, entre los que destacan los moais más grandes de la Polinesia, el Ahu Tongariki, así como Rano Raraku, el mítico lugar donde se fabricaban los moais, entre muchos otros.<br><br>
+          Descubra el comienzo, el apogeo y la caída de la civilización, así como los conflictos civiles.</p>
 
         <!-- Tabs -->
         <ul class="nav nav-tabs mt-4" id="tabMenu">
@@ -113,7 +115,8 @@
             <p>Salida desde el hotel a las 9:00, recorrido por Ahu Tongariki, Rano Raraku, Ahu Akahanga. Pausa para snacks y regreso al hotel a las 15:00 hrs.</p>
           </div>
           <div id="recogida">
-            <p>Recogida desde tu hotel entre 15 a 10 minutos antes de la hora programada. Llevar identificación visible.</p>
+            <p><p><b>Aviso:</b> La recogida tendrá lugar 15 minuto(s) antes de la hora de salida programada.
+              Ofrecemos recogidas en los siguientes lugares para acudir a su experiencia:</p>
           </div>
         </div>
         <ul>
