--- a/tour_hanga_roa.html
+++ b/tour_hanga_roa.html
@@ -80,7 +80,10 @@
 
         <!-- Título y descripción -->
         <h2>Tour privado por la fábrica de los Moai</h2>
-        <p>En este tour recorrerás gran parte de la isla, descubriendo la costa oeste, un lugar con increíbles tesoros arqueológicos. Visitarás los lugares más emblemáticos de la isla como Ahu Tongariki y Rano Raraku.</p>
+        <p>Te invitamos a unirte a nuestro emocionante recorrido por la única ciudad de Rapa Nui, Hanga Roa. Descubrirá la belleza natural y la rica cultura de esta remota isla declarada Patrimonio de la Humanidad por la UNESCO. <br><br>
+          De la mano de nuestros guías experimentados y nativos de la isla, podrás sumergirte en la cultura e historia de este lugar único en el mundo.<br><br>
+          
+          Visitarás algunos de los famosos Moais que se encuentran en Hanga Roa, descubrirás los secretos detrás de su construcción y significado y aprenderás sobre su vida diaria y sus tradiciones. Hanga Roa, al ser la única ciudad de Rapa Nui, también esconde detrás una historia fascinante, que queremos que conozcas. Además de la historia, podrás disfrutar de las impresionantes vistas de la isla y de las hermosas playas de roca y arena negra.</p>
 
         <!-- Tabs -->
         <ul class="nav nav-tabs mt-4" id="tabMenu">
