--- a/tour_ranokau_y_orongo.html
+++ b/tour_ranokau_y_orongo.html
@@ -80,7 +80,8 @@
 
         <!-- Título y descripción -->
         <h2>Tour privado por la fábrica de los Moai</h2>
-        <p>En este tour recorrerás gran parte de la isla, descubriendo la costa oeste, un lugar con increíbles tesoros arqueológicos. Visitarás los lugares más emblemáticos de la isla como Ahu Tongariki y Rano Raraku.</p>
+        <p>Se realizó la competencia Tangata Manu (Hombre Pájaro), que consistía en saltar al mar desde un acantilado y llevar un huevo de manutara a la orilla. Quien lo lograba se convertía en el nuevo rey de Rapa Nui por un año, hasta la siguiente competencia.<br><br>
+          Visitarás el increíble cráter del volcán Rano Kau y disfrutarás de su hermoso paisaje. En Vinapu se descubren varias teorías, que sugieren la posible llegada e influencia de los Incas desde tiempos inmemoriales.</p>
 
         <!-- Tabs -->
         <ul class="nav nav-tabs mt-4" id="tabMenu">
@@ -113,7 +114,8 @@
             <p>Salida desde el hotel a las 9:00, recorrido por Ahu Tongariki, Rano Raraku, Ahu Akahanga. Pausa para snacks y regreso al hotel a las 15:00 hrs.</p>
           </div>
           <div id="recogida">
-            <p>Recogida desde tu hotel entre 15 a 10 minutos antes de la hora programada. Llevar identificación visible.</p>
+            <p><p><b>Aviso:</b> La recogida tendrá lugar 15 minuto(s) antes de la hora de salida programada.
+              Ofrecemos recogidas en los siguientes lugares para acudir a su experiencia:</p>
           </div>
         </div>
         <ul>
