--- a/tour_amanecer_tongariki.html
+++ b/tour_amanecer_tongariki.html
@@ -80,7 +80,11 @@
 
         <!-- Título y descripción -->
         <h2>Tour privado por la fábrica de los Moai</h2>
-        <p>En este tour recorrerás gran parte de la isla, descubriendo la costa oeste, un lugar con increíbles tesoros arqueológicos. Visitarás los lugares más emblemáticos de la isla como Ahu Tongariki y Rano Raraku.</p>
+        <p>En este recorrido veremos salir el sol detrás del ahu moai más impresionante que existe en la Polinesia, el Ahu Tongaritki. Cuando ingresamos a este lugar podrás observar una increíble vista del Océano Pacífico y el amanecer detrás de Ahu Tongariki. <br><br>
+          
+          Estaremos de regreso en su lugar de hospedaje alrededor de las 9:00 o 10:00 am. Además, el tiempo del recorrido puede variar dependiendo de cuánto tiempo quieras pasar en este increíble sector.<br><br>
+          Lugares que visitaremos:
+          Ahu Tongariki: La plataforma moai más impresionante de la Polinesia. Una vista increíble del Océano Pacífico mientras vemos salir el sol detrás de los moais, una vista que sin duda es imperdible.</p>
 
         <!-- Tabs -->
         <ul class="nav nav-tabs mt-4" id="tabMenu">
@@ -113,7 +117,8 @@
             <p>Salida desde el hotel a las 9:00, recorrido por Ahu Tongariki, Rano Raraku, Ahu Akahanga. Pausa para snacks y regreso al hotel a las 15:00 hrs.</p>
           </div>
           <div id="recogida">
-            <p>Recogida desde tu hotel entre 15 a 10 minutos antes de la hora programada. Llevar identificación visible.</p>
+            <p><p><b>Aviso:</b> La recogida tendrá lugar 15 minuto(s) antes de la hora de salida programada.
+              Ofrecemos recogidas en los siguientes lugares para acudir a su experiencia:</p>
           </div>
         </div>
         <ul>
