--- a/tour_costa_norte.html
+++ b/tour_costa_norte.html
@@ -80,7 +80,8 @@
 
         <!-- Título y descripción -->
         <h2>Tour privado por la fábrica de los Moai</h2>
-        <p>En este tour recorrerás gran parte de la isla, descubriendo la costa oeste, un lugar con increíbles tesoros arqueológicos. Visitarás los lugares más emblemáticos de la isla como Ahu Tongariki y Rano Raraku.</p>
+        <p>En este tour conocerás el lado norte inexplorado de la isla de Rapa Nui, caminando sobre las ruinas de moais que no han sido tocados en años, ingresarás a cuevas que solo los nativos conocen y tienen acceso, y disfruta de paisajes y acantilados que sólo se ven en estos tours.
+          Déjate sorprender por la belleza indómita de Rapa Nui y redescubre este paisaje inexplorado.</p>
 
         <!-- Tabs -->
         <ul class="nav nav-tabs mt-4" id="tabMenu">
@@ -113,7 +114,8 @@
             <p>Salida desde el hotel a las 9:00, recorrido por Ahu Tongariki, Rano Raraku, Ahu Akahanga. Pausa para snacks y regreso al hotel a las 15:00 hrs.</p>
           </div>
           <div id="recogida">
-            <p>Recogida desde tu hotel entre 15 a 10 minutos antes de la hora programada. Llevar identificación visible.</p>
+            <p><p><b>Aviso:</b> La recogida tendrá lugar 15 minuto(s) antes de la hora de salida programada.
+              Ofrecemos recogidas en los siguientes lugares para acudir a su experiencia:</p>
           </div>
         </div>
         <ul>
