Incorporación contenido final tour Costa Norte, Amanecer, y Hanga Roa

--- a/tour_amanecer_tongariki.html
+++ b/tour_amanecer_tongariki.html
@@ -102,44 +102,78 @@
         <!-- Contenido dinámico -->
         <div class="tab-content py-3">
           <div id="descripcion" class="active">
-            <h6>¿Qué está incluido en el precio?</h6>
+            <p><b>¿Qué está incluido en el precio?</p></b>
             <ul>
               <li>Transporte privado</li>
-              <li>Guía nativo certificado</li>
+              <li>Guía nativo y certificado</li>
             </ul>
-            <h6>Exclusiones</h6>
+            <p><b>Notas Importantes</p></b>
             <ul>
-              <li>Comida y bebida</li>
-              <li>Entrada al Parque Nacional</li>
+              <li>Accesible para sillas de ruedas.</li>
+              <li>Accesible para silla de bebé o cochecito.</li>
+              <li>Se permiten animales o mascotas.</li>
+              <li>Transporte publico cerca.</li>
+              <li>Asientos para bebes disponibles</li>
+              <li>Los bebés no deben sentarse en el regazo.</li>
+              <li>El guía estará fuera del hotel a la hora coordinada con los pasajeros.</li>
+            </ul>
+            <p><b>Qué necesito llevar?</b></p>
+            <ul>
+              <li>Ropa abrigada (para el frío de la mañana)</li>
+              <li>Protector solar (para después del amanecer)</li>
+              <li>Agua y un refrigerio ligero.</li>
+              <li>Cámara o teléfono para fotos.</li>
+              <li>Sombrero o gorra</li>
+            </ul> 
+              <p><b>Política de cancelación</b></p>
+            </ul>
+            <ul>
+              <li>Cobraremos una tasa de cancelación del 100% si cancelas la reserva 1 Día o antes, del comienzo del evento</li>
+              <li>Cobraremos una tasa de cancelación del 0% si cancelas la reserva 1000 Días o antes, del comienzo del evento.</li>
+            </ul>
+            <p><b>Más Información</b></p>
+            <ul>
+              <li><b>Tipo de experiencia:</b> Tour / Actividad privado</li>
+              <li><b>Reservar con antelación:</b> Hora de cierre de reserva: 8 horas</li>
+              <li><b>Duración:</b> 2h, 30min</li>
+              <li><b>Dificultad:</b> fácil</li>
             </ul>
           </div>
           <div id="itinerario">
-            <p>Salida desde el hotel a las 9:00, recorrido por Ahu Tongariki, Rano Raraku, Ahu Akahanga. Pausa para snacks y regreso al hotel a las 15:00 hrs.</p>
+            <p><b>Amanecer en Rapa Nui</p></b>
+            <p>Una experiencia inolvidable para comenzar el día conectado con la energía ancestral de la isla. Vive uno de los momentos más impactantes de Rapa Nui: el amanecer frente a los moai. Este tour ofrece una mirada íntima y silenciosa a la isla mientras despierta, revelando su belleza natural y espiritual bajo los primeros rayos del sol.</p>
+            <ul>
+              <li><strong>Amanecer en Rapa Nui:</strong> El guía te llevará al parque para que puedas disfrutar de un increíble amanecer en Rapa Nui.</li>
+              <li><strong>Tongariki:</strong> Experimentaremos el amanecer más mágico de la isla, donde los moai se iluminan con los primeros rayos del sol y el paisaje se transforma en un espectáculo de luz y sombra inolvidable.</li>
+            </ul>
+            
+
           </div>
           <div id="recogida">
-            <p><p><b>Aviso:</b> La recogida tendrá lugar 15 minuto(s) antes de la hora de salida programada.
+            <p><b>Aviso:</b> La recogida tendrá lugar 15 minuto(s) antes de la hora de salida programada.
               Ofrecemos recogidas en los siguientes lugares para acudir a su experiencia:</p>
+          
+            <ul>
+             <li>Altiplanico Rapa Nui</li>
+             <li>Easter Island Eco Lodge</li>
+             <li>Explora Rapa Nui</li>
+             <li>Hanana’s Residential Mata Vai Rahi</li>
+             <li>Hanga Piko</li>
+             <li>Hanga Roa Habrbour</li>
+             <li>Hare Maea</li>
+             <li>Hostal Gomero</li>
+             <li>Hotel Manavai</li>
+             <li>Hotel Manutara</li>
+             <li>Hotel Oceania Rapa Nui</li>
+             <li>Hotel Ohana</li>
+             <li>Hotel Puku vai</li>
+             <li>Hotel taha Tai</li>
+             <li>Hotel Tiare Pacific</li>
+             <li>Hotumatua</li>
+             <li>Iorana Hotel</li>
+              </ul>
+            </div>
           </div>
-        </div>
-        <ul>
-          <li>Altiplanico Rapa Nui</li>
-          <li>Easter Island Eco Lodge</li>
-          <li>Explora Rapa Nui</li>
-          <li>Hanana’s Residential Mata Vai Rahi</li>
-          <li>Hanga Piko</li>
-          <li>Hanga Roa Habrbour</li>
-          <li>Hare Maea</li>
-          <li>Hostal Gomero</li>
-          <li>Hotel Manavai</li>
-          <li>Hotel Manutara</li>
-          <li>Hotel Oceania Rapa Nui</li>
-          <li>Hotel Ohana</li>
-          <li>Hotel Puku vai</li>
-          <li>Hotel taha Tai</li>
-          <li>Hotel Tiare Pacific</li>
-          <li>Hotumatua</li>
-          <li>Iorana Hotel</li>
-        </ul>
       </div>
 
       <!-- Columna lateral -->
