--- a/tour_hanga_roa.html
+++ b/tour_hanga_roa.html
@@ -101,44 +101,85 @@
         <!-- Contenido dinámico -->
         <div class="tab-content py-3">
           <div id="descripcion" class="active">
-            <h6>¿Qué está incluido en el precio?</h6>
+            <p><b>¿Qué está incluido en el precio?</p></b>
             <ul>
               <li>Transporte privado</li>
               <li>Guía nativo certificado</li>
+              <li>Visitar el museo de Rapa Nui</li>
             </ul>
-            <h6>Exclusiones</h6>
+            <p><b>Notas Importantes</p></b>
             <ul>
-              <li>Comida y bebida</li>
-              <li>Entrada al Parque Nacional</li>
+              <li>Accesible para sillas de ruedas.</li>
+              <li>Accesible para silla de bebé o cochecito.</li>
+              <li>Se permiten animales o mascotas.</li>
+              <li>Transporte publico cerca.</li>
+              <li>Asientos para bebes disponibles</li>
+              <li>Los bebés no deben sentarse en el regazo.</li>
+              <li>Lo recogeremos del hotel o lugar donde se hospedará de 15 a 10 minutos antes de la hora programada. El guía llevará una tarjeta de identificación con el logo y nombre de la empresa para que nos sea fácil identificarnos.</li>
+            </ul>
+            <p><b>Qué necesito llevar?</b></p>
+            <ul>
+              <li>Zapatos cómodos para caminar.</li>
+              <li>Ropa ligera y transpirable.</li>
+              <li>Protección solar (protector solar, gorra, gafas de sol)</li>
+              <li>Agua y un pequeño refrigerio.</li>
+              <li>Cámara o teléfono para fotos.</li>
+              <li>Una bolsa reutilizable para cualquier compra o artículo personal.</li>
+              <li>Efectivo o tarjeta para compras o cenas locales.</li>
+            </ul> 
+              <p><b>Política de cancelación</b></p>
+            </ul>
+            <ul>
+              <li>Cobraremos una tasa de cancelación del 100% si cancelas la reserva 1 Día o antes, del comienzo del evento</li>
+              <li>Cobraremos una tasa de cancelación del 0% si cancelas la reserva 1000 Días o antes, del comienzo del evento.</li>
+            </ul>
+            <p><b>Más Información</b></p>
+            <ul>
+              <li><b>Tipo de experiencia:</b> Tour / Actividad privado</li>
+              <li><b>Reservar con antelación:</b> Hora de cierre de reserva: 8 horas</li>
+              <li><b>Duración:</b> 2h, 30min</li>
+              <li><b>Dificultad:</b> fácil</li>
             </ul>
           </div>
           <div id="itinerario">
-            <p>Salida desde el hotel a las 9:00, recorrido por Ahu Tongariki, Rano Raraku, Ahu Akahanga. Pausa para snacks y regreso al hotel a las 15:00 hrs.</p>
+            <p><b>Recorrido por Hanga Roa</p></b>
+            <p>Descubre Hanga Roa desde una perspectiva única, donde cada parada revela una parte esencial de la identidad de Isla de Pascua. Este recorrido te llevará por espacios cargados de historia, tradición y significado, combinando arquitectura, rituales ancestrales y paisajes que conectan con el alma del territorio</p>
+            <ul>
+              <li><strong>Iglesia Católica de Hanga Roa:</strong> La primera y única iglesia de la isla, cargada de historia y simbolismo.</li>
+              <li><strong>Complejo Ceremonial Tahai:</strong> Sitio arqueológico clave con vistas al océano y moai restaurados.</li>
+               <li><strong>Cementerio de Rapa Nui:</strong> Breve visita para conocer su valor cultural y espiritual.</li>
+               <li><strong>Hanga Piko:</strong> Caleta y puerto con un moai único y fuerte identidad pesquera.</li>
+               <li><strong>Plaza Principal:</strong> Corazón social e histórico de la comunidad de Hanga Roa.</li>
+               <li><strong>Iglesia de Santa Cruz:</strong> Espacio que fusiona la tradición católica con la cosmovisión local.</li>
+               <li><strong>Atardecer en Tahai:</strong> Cierre del recorrido en uno de los paisajes más emblemáticos de la isla.</li>
+            </ul>
+
           </div>
           <div id="recogida">
             <p><b>Aviso:</b> La recogida tendrá lugar 15 minuto(s) antes de la hora de salida programada.
               Ofrecemos recogidas en los siguientes lugares para acudir a su experiencia:</p>
+          
+            <ul>
+             <li>Altiplanico Rapa Nui</li>
+             <li>Easter Island Eco Lodge</li>
+             <li>Explora Rapa Nui</li>
+             <li>Hanana’s Residential Mata Vai Rahi</li>
+             <li>Hanga Piko</li>
+             <li>Hanga Roa Habrbour</li>
+             <li>Hare Maea</li>
+             <li>Hostal Gomero</li>
+             <li>Hotel Manavai</li>
+             <li>Hotel Manutara</li>
+             <li>Hotel Oceania Rapa Nui</li>
+             <li>Hotel Ohana</li>
+             <li>Hotel Puku vai</li>
+             <li>Hotel taha Tai</li>
+             <li>Hotel Tiare Pacific</li>
+             <li>Hotumatua</li>
+             <li>Iorana Hotel</li>
+              </ul>
+            </div>
           </div>
-        </div>
-        <ul>
-          <li>Altiplanico Rapa Nui</li>
-          <li>Easter Island Eco Lodge</li>
-          <li>Explora Rapa Nui</li>
-          <li>Hanana’s Residential Mata Vai Rahi</li>
-          <li>Hanga Piko</li>
-          <li>Hanga Roa Habrbour</li>
-          <li>Hare Maea</li>
-          <li>Hostal Gomero</li>
-          <li>Hotel Manavai</li>
-          <li>Hotel Manutara</li>
-          <li>Hotel Oceania Rapa Nui</li>
-          <li>Hotel Ohana</li>
-          <li>Hotel Puku vai</li>
-          <li>Hotel taha Tai</li>
-          <li>Hotel Tiare Pacific</li>
-          <li>Hotumatua</li>
-          <li>Iorana Hotel</li>
-        </ul>
       </div>
 
       <!-- Columna lateral -->
