Cambio en algunos alts

--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
       <div class="col-lg-6">
         <div class="d-flex flex-wrap gap-3 justify-content-center">
           <div class="d-flex flex-column gap-3">
-            <img src="Img-habitaciones/deluxe_horizontal_3.jpg" class="img-mosaico-small rounded shadow" alt="Habitación 1">
-            <img src="Img-habitaciones/familiar_horziontal_3.jpg" class="img-mosaico-small rounded shadow" alt="Habitación 2">
+            <img src="Img-habitaciones/deluxe_horizontal_3.jpg" class="img-mosaico-small rounded shadow" alt="Habitación deluxe">
+            <img src="Img-habitaciones/familiar_horziontal_3.jpg" class="img-mosaico-small rounded shadow" alt="Habitación familiar">
           </div>
-          <img src="Img-habitaciones/superior_3.jpg " class="img-mosaico-large rounded shadow" alt="Habitación Familiar">
+          <img src="Img-habitaciones/superior_3.jpg " class="img-mosaico-large rounded shadow" alt="Habitación superior">
         </div>
       </div>
 
