--- a/tours.html
+++ b/tours.html
@@ -79,9 +79,9 @@
               <img src="Img-tours/tour_hanga_roa.png" class="w-100 h-100 object-fit-cover" alt="Tour Amanecer">
               <div class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-4" style="background: rgba(0,0,0,0.4);">
                 <small>Half Day</small>
-                <h5><a href="/tour_hanga_roa.html" class="text-white text-decoration-none">Hanga Roa: Única ciudad en Rapa Nui</h5>
+                <h5><a href="tour_hanga_roa.html" class="text-white text-decoration-none">Hanga Roa: Única ciudad en Rapa Nui</h5>
                 <p class="mb-2">Desde $70.000 CLP</p>
-                <a href="/tour_hanga_roa.html" class="btn btn-light btn-sm">Ver más</a>
+                <a href="tour_hanga_roa.html" class="btn btn-light btn-sm">Ver más</a>
               </div>
             </div>
           </div>
