Cambios en algunos href landing tours

--- a/tours.html
+++ b/tours.html
@@ -107,9 +107,9 @@
               <img src="Img-tours/tour_costa_norte.jpg" class="w-100 h-100 object-fit-cover" alt="Tour Amanecer">
               <div class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-4" style="background: rgba(0,0,0,0.4);">
                 <small>Full Day</small>
-                <h5><a href="/tour_costa_norte.html" class="text-white text-decoration-none">Tour Costa Norte Rapa Nui</a></h5>
+                <h5><a href="tour_costa_norte.html" class="text-white text-decoration-none">Tour Costa Norte Rapa Nui</a></h5>
                 <p class="mb-2">Desde $80.000 CLP</p>
-                <a href="/tour_costa_norte.html" class="btn btn-light btn-sm">Ver más</a>
+                <a href="tour_costa_norte.html" class="btn btn-light btn-sm">Ver más</a>
               </div>
             </div>
           </div>
@@ -119,9 +119,9 @@
               <img src="Img-tours/tour_cuevas.jpg" class="w-100 h-100 object-fit-cover" alt="Tour Amanecer">
               <div class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-4" style="background: rgba(0,0,0,0.4);">
                 <small>Full Dat</small>
-                <h5><a href="/tour_cuevas_ancestrales.html" class="text-white text-decoration-none">Cuevas Ancestrales y Orongo Rapa Nui</a></h5>
+                <h5><a href="tour_cuevas_ancestrales.html" class="text-white text-decoration-none">Cuevas Ancestrales y Orongo Rapa Nui</a></h5>
                 <p class="mb-2">Desde $115.000 CLP</p>
-                <a href="/tour_cuevas_ancestrales.html" class="btn btn-light btn-sm">Ver más</a>
+                <a href="tour_cuevas_ancestrales.html" class="btn btn-light btn-sm">Ver más</a>
               </div>
             </div>
           </div>
@@ -133,9 +133,9 @@
               <img src="Img-tours/tour_fabrica_moai.jpg" class="w-100 h-100 object-fit-cover" alt="Tour Amanecer">
               <div class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-4" style="background: rgba(0,0,0,0.4);">
                 <small>Full Day</small>
-                <h5><a href="/tour_fabrica_moais.html" class="text-white text-decoration-none">Tour Privado Fabrica De Los Moais</a></h5>
+                <h5><a href="tour_fabrica_moais.html" class="text-white text-decoration-none">Tour Privado Fabrica De Los Moais</a></h5>
                 <p class="mb-2">Desde $135.000 CLP</p>
-                <a href="/tour_fabrica_moais.html" class="btn btn-light btn-sm">Ver más</a>
+                <a href="tour_fabrica_moais.html" class="btn btn-light btn-sm">Ver más</a>
               </div>
             </div>
           </div>
@@ -147,9 +147,9 @@
               <img src="Img-tours/tour_orongo.jpg" class="w-100 h-100 object-fit-cover" alt="Tour Amanecer">
               <div class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-4" style="background: rgba(0,0,0,0.4);">
                 <small>Half Day</small>
-                <h5><a href="/tour_ranokau_y_orongo.html" class="text-white text-decoration-none">Volcán Rano Kau y Orongo</a></h5>
+                <h5><a href="tour_ranokau_y_orongo.html" class="text-white text-decoration-none">Volcán Rano Kau y Orongo</a></h5>
                 <p class="mb-2">Desde $60.000 CLP</p>
-                <a href="/tour_ranokau_y_orongo.html" class="btn btn-light btn-sm">Ver más</a>
+                <a href="tour_ranokau_y_orongo.html" class="btn btn-light btn-sm">Ver más</a>
               </div>
             </div>
           </div>
