Cambios denuevo en href

--- a/tours.html
+++ b/tours.html
@@ -93,9 +93,9 @@
               <img src="Img-tours/tour_amanecer.jpg" class="w-100 h-100 object-fit-cover" alt="Tour Amanecer">
               <div class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end p-4" style="background: rgba(0,0,0,0.4);">
                 <small>Full Day</small>
-                <h5><a href="/tour_amanecer_tongariki.html" class="text-white text-decoration-none">Amanecer en Ahu tongariki</a></h5>
+                <h5><a href="tour_amanecer_tongariki.html" class="text-white text-decoration-none">Amanecer en Ahu tongariki</a></h5>
                 <p class="mb-2">Desde $120.000 CLP</p>
-                <a href="/tour_amanecer_tongariki.html" class="btn btn-light btn-sm">Ver más</a>
+                <a href="tour_amanecer_tongariki.html" class="btn btn-light btn-sm">Ver más</a>
               </div>
             </div>
           </div>
