Cambios en el href del navbar para fvicon

--- a/habitacion_superior.html
+++ b/habitacion_superior.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="/Img-otros/logo.png" type="image/x-icon">
+  <link rel="icon" href="Img-otros/logo.png" type="image/x-icon">
   <meta name="description" content="Descubre Rapa Nui con la calma, tranquilidad y confort qeu tu y tu familia se merecen, con nuestra habitación familiar.">
   <title>Habitación Superior | Hotel Rapa Nui</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
