--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Aprende más sobre Rapa Nui, su cultura, historia, gastronomía y mucho más en nuestros blogs." />
-  <link rel="icon" href="/Img-otros/logo.png" type="image/x-icon">
+  <link rel="icon" href="Img-otros/logo.png" type="image/x-icon">
   <title>Blog | Hotel Rapa Nui</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
