--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="¿Estás pensando visitar Rapa Nui, pero tienes dudas? En Hotel Rapa Nui estamos disponibles para resolver cualquier consulta, solo escribenos" />
-  <link rel="icon" href="/Img-otros/logo.png" type="image/x-icon">
+  <link rel="icon" href="Img-otros/logo.png" type="image/x-icon">
   <title>Contacto | Hotel Rapa Nui</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
