--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Hotel Rapa Nui: Vive la experiencia única de Isla de Pascua con habitaciones, tours y ceremonias ancestrales."/>
-  <link rel="icon" href="/Img-otros/logo.png" type="image/x-icon">
+  <link rel="icon" href="Img-otros/logo.png" type="image/x-icon">
   <title>Hotel Rapa Nui</title>
   <!-- Bootstrap CSS -->
   <link
