--- a/informacion.html
+++ b/informacion.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="¿Pensando en viajar a Rapa Nui, pero aún con dudas? Encuentra en Hotel Rapa Nui todas las respuestas a las dudas frecuentes de quienes visitan este majestuoso lugar">
   <link rel="icon" href="Img-otros/logo.png" type="image/x-icon">
   <title>Información Rapa Nui | Hotel Rapa Nui</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
