--- a/matrimonios.html
+++ b/matrimonios.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="¿Buscas una experiencia úncia en tu relación? Te invitamos a llevar acabo el matrimonio ancestral, ceremonia tradicional en Rapa Nui, llena de magia y única desde el corazón">
   <link rel="icon" href="Img-otros/logo.png" type="image/x-icon">
   <title>Matrimonios Ancestrales | Hotel Rapa Nui</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
