--- a/tour_amanecer_tongariki.html
+++ b/tour_amanecer_tongariki.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Encuentra un tour único, en donde podrás ver el amanecer en uno de los ahu más icónicos de la isla, el Ahu Tongariki. Podrás ver el amanecer, con una vista increíble al océano.">
   <link rel="icon" href="Img-otros/logo.png" type="image/x-icon">
   <title>Tour Amanecer Tongariki | Hotel Rapa Nui</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
