--- a/tour_costa_norte.html
+++ b/tour_costa_norte.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Visista el lado norte inexplorado de la isla de Rapa Nui con nuestro tour a la costa norte. Camina sobre ruinas de moais e ingresa a cuevas, acompañado de guías nativos">
   <link rel="icon" href="Img-otros/logo.png" type="image/x-icon">
   <title>Tour Costa Norte Rapa Nui | Hotel Rapa Nui</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
