--- a/tour_fabrica_moais.html
+++ b/tour_fabrica_moais.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="xplora la costa oeste de Rapa Nui: moais gigantes, playas sagradas y restos arqueológicos que narran la historia de una civilización única.">
   <link rel="icon" href="Img-otros/logo.png" type="image/x-icon">
   <title>Tour Privado Fábrica de Moai | Hotel Rapa Nui</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
