--- a/tour_hanga_roa.html
+++ b/tour_hanga_roa.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="description" content="Descubre la única ciudad de Rapa Nui, Hanga Roa. Una ciudad donde la cultura e historia reflejan años de tradiciones de este asombroso pueblo">
   <link rel="icon" href="Img-otros/logo.png" type="image/x-icon">
   <title>Tour Ciudad Hanga Roa | Hotel Rapa Nui</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
