--- a/tour_ranokau_y_orongo.html
+++ b/tour_ranokau_y_orongo.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Descubre y visita el lugar donde se realizó la competencia Tangata Manu, donde se seleccionaba al nuevo rey Rapa Nui. Vistia también el volcán Rano Kau y su asombroso entorno">
   <link rel="icon" href="Img-otros/logo.png" type="image/x-icon">
   <title>Tour Volcán Ranokau y Orongo | Hotel Rapa Nui</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
