--- a/tours.html
+++ b/tours.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Encuentra los mejores tours en Rapa Nui, con guías nativos y certificados. Vive una experiencia llena de historia y cultura">
   <link rel="icon" href="Img-otros/logo.png" type="image/x-icon">
   <title>Tours | Hotel Rapa Nui</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
