--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       
       <!-- Logo a la izquierda -->
       <a class="navbar-brand fw-bold fs-4" href="index.html">
-        <img src="Img-otros/logo_blanco.png" alt="Hotel Rapa Nui Logo" style="height: 60px;">
+        <img src="Img-otros/logo_blanco.png" alt="Hotel Rapa Nui Logo Blanco" style="height: 60px;">
       </a>
 
       <!-- Toggler para mobile -->
@@ -254,10 +254,10 @@
         <img src="Img-otros/Matrimonios_ancestrales_2.jpg" class="img-fluid rounded shadow" alt="Ceremonia tradicional Rapa Nui">
       </div>
       <div class="col-md-4">
-        <img src="Img-otros/matrimonios_ancestrales_1.jpg" class="img-fluid rounded shadow" alt="Pareja en paisaje isleño">
+        <img src="Img-otros/matrimonios_ancestrales_1.jpg" class="img-fluid rounded shadow" alt="Palmas en plena ceremonia Rapa Nui">
       </div>
       <div class="col-md-4">
-        <img src="Img-otros/Matrimonios_ancestrales_5.jpg" class="img-fluid rounded shadow" alt="Novia en Rapa Nui">
+        <img src="Img-otros/Matrimonios_ancestrales_5.jpg" class="img-fluid rounded shadow" alt="Pareja finalizada la cremonia en Rapa Nui">
       </div>
     </div>
   </div>
